--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -6,7 +6,7 @@
     runs-on: ubuntu-latest
     steps: 
     - name: step1
-      run: echo pull request test
+      run: echo pull request test2
     - name: step2 
       run: |
         echo hello world
