--- a/.github/workflows/create_repo.yaml
+++ b/.github/workflows/create_repo.yaml
@@ -1,20 +1,21 @@
 
 name: create-repo
-on: workflow_dispatch
-  inputs:
-    prefix:
-      description: 'set repo prefix'
-      required: true
-      default: 'service'
-      type: choice
+on: 
+  workflow_dispatch: 
+    inputs:
+      prefix:
+        description: 'set repo prefix'
+        required: true
+        default: 'service'
+        type: choice
         options: 
         - example
         - service
-    name:
-      description: 'set repo name'
-      required: true
-      default: 'github-actions'
-      type: string  
+      name:
+        description: 'set repo name'
+        required: true
+        default: 'github-actions'
+        type: string  
 
 
 
@@ -24,7 +25,7 @@ jobs:
     steps: 
     - name: gh auto login
       run: |
-        echo ${{secrets.PERSONAL_ACCESS_TOKEN}} | gh auth login --with-token
+        echo ${{ secrets.PERSONAL_ACCESS_TOKEN }} | gh auth login --with-token
     - name: create repo
       run: |
         gh repo create dahye-action/${{ inputs.prefix }}-${{ inputs.name }} --public --add-readme
