--- a/.github/workflows/create_repo.yaml
+++ b/.github/workflows/create_repo.yaml
@@ -55,6 +55,6 @@ jobs:
             ]
           }
       env:
-        SLACK_WEBHOOK_URL:  ${{ secrets.SLACK_WEBHOOK_UR }}
+        SLACK_WEBHOOK_URL:  ${{ secrets.SLACK_WEBHOOK_URL }}
         SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
 
