--- a/.github/workflows/create_repo.yaml
+++ b/.github/workflows/create_repo.yaml
@@ -42,7 +42,7 @@ jobs:
           {
             "attachments": [
               {
-                "pretext": "create repo result,
+                "pretext": "create repo result",
                 "color": "28a745",
                 "fields": [
                   {
