--- a/.github/workflows/issue_notify.yaml
+++ b/.github/workflows/issue_notify.yaml
@@ -48,9 +48,9 @@ jobs:
                 "color": "28a745",
                 "fields": [
                   {
-                    "title": Level : ${{ needs.get-keyword.outputs.level }},
+                    "title": "Level : ${{ needs.get-keyword.outputs.level }}",
                     "short": true,
-                    "value": issue url : ${{ github.event.issue.html_url }}
+                    "value": "issue url : ${{ github.event.issue.html_url }}"
                   }
                 ]
               }` 
