--- a/.github/workflows/issue_notify.yaml
+++ b/.github/workflows/issue_notify.yaml
@@ -8,6 +8,8 @@ on:
 jobs:
   get-keyword:
     runs-on: ubuntu-latest
+    outputs: 
+      level: ${{ steps.get-keyword.outputs.level }}
 
     steps:
 
@@ -37,8 +39,6 @@ jobs:
     runs-on: ubuntu-latest
     environment: ${{ needs.get-keyword.outputs.level }} #enviroment에 따라 ${{ secrets.SLACK_WEBHOOK_URL }}이 달라지게
     steps: 
-    - name : 
-      run: echo ${{ needs.get-keyword.outputs.level }}
     - name: slack
       uses: slackapi/slack-github-action@v1.24.0
       with:
