--- a/.github/workflows/output.yaml
+++ b/.github/workflows/output.yaml
@@ -4,11 +4,20 @@ on: push
 jobs:
   create-output:
     runs-on: ubuntu-latest
+    outputs:
+      test: ${{ steps.checkout-output.outputs.test }}
     steps:
     - name: echo output
       id: check-output
       run: | 
         echo "test=hello" >> $GITHUB_OUTPUT
     - name: check output
-      run: |
-        echo ${{ steps.check-output.outputs.test }}
+      run: |  
+        echo ${{ steps.check-output.outputs.test }}    
+  
+  get-output:
+    needs: [create-output]
+    runs-on: ubuntu-latest
+    steps:
+    - name: get output
+      run: echo ${{ needs.checkout-output.outputs.test }}
