--- a/.github/workflows/output.yaml
+++ b/.github/workflows/output.yaml
@@ -5,7 +5,7 @@ jobs:
   create-output:
     runs-on: ubuntu-latest
     outputs:
-      test: ${{ steps.checkout-output.outputs.test }}
+      test: ${{ steps.check-output.outputs.test }}
     steps:
     - name: echo output
       id: check-output
@@ -20,4 +20,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: get output
-      run: echo ${{ needs.checkout-output.outputs.test }}
+      run: echo ${{ needs.check-output.outputs.test }}
